--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,6 +1,10 @@
 <html>
     <head>
+        {% if title %}
         <title>{{ title }} - RegisterMe!</title>
+        {% else %}
+        <title>Welcome to RegisterMe!</title>
+        {% endif %}
     </head>
     <body>
         <h1>Hello, {{ user.username }}!</h1>
